Revert "modularize launcher module"
This reverts commit 148adc108d33bbfcac1d7afd18e02707602ac39d.