@@ -12,15 +12,6 @@
     <name>Mule 4 Launcher</name>
 
     <properties>
-        <!-- Add visibility required by the tests exclusively -->
-        <!-- TODO W-13824979 Remove the splash add-opens-->
-        <surefire.args>
-            -XX:+IgnoreUnrecognizedVMOptions
-            --add-modules=net.bytebuddy.agent
-            --add-opens=org.mule.runtime.core/org.mule.runtime.core.internal.util.splash=ALL-UNNAMED
-            ${surefire.args.base}
-        </surefire.args>
-
         <javaModuleName>org.mule.runtime.launcher</javaModuleName>
         <skipExportTests>false</skipExportTests>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
@@ -95,6 +86,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
+            <version>${mockitoVersion}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
